<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Udimob</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bairro">Bairro :</string>
    <string name="preco">Preço :</string>
    <string name="descricao">Descrição do Imóvel :</string>
    <string name="proprietario">Imobiliária :</string>
    <string name="email">E-mail : </string>
    <string name="telefone">Telefone : </string>
    <string name="endereco">Endereço : </string>

    <string-array name="bairros">
        <item>Centro</item>
        <item>Fundinho</item>
        <item>Nossa Senhora Aparecida</item>
        <item>Martins</item>
        <item>Osvaldo Rezende</item>
        <item>Bom Jesus</item>
        <item>Brasil</item>
        <item>Cazeca</item>
        <item>Lídice</item>
        <item>Daniel Fonseca</item>
        <item>Tabajaras</item>
        <item>Presidente Roosevelt</item>
        <item>Jardim Brasília</item>
        <item>São José</item>
        <item>Marta Helena</item>
        <item>Pacaembu</item>
        <item>Santa Rosa</item>
        <item>Residencial Gramado</item>
        <item>Nossa Senhora das Graças</item>
        <item>Minas Gerais</item>
        <item>Cruzeiro do Sul</item>
        <item>Jardim América</item>
        <item>Jardim América II</item>
        <item>Distrito Industrial Norte</item>
        <item>Residencial Liberdade</item>
        <item>Maravilha</item>
        <item>Esperança</item>
        <item>Jaraguá</item>
        <item>Planalto</item>
        <item>Chácaras Tubalina</item>
        <item>Chácaras Panorama</item>
        <item>Luizote de Freitas</item>
        <item>Jardim das Palmeiras</item>
        <item>Jardim Patrícia</item>
        <item>Jardim Holanda</item>
        <item>Jardim Europa</item>
        <item>Jardim Canaã</item>
        <item>Jardim Célia</item>
        <item>Mansour</item>
        <item>Dona Zulmira</item>
        <item>Taiaman</item>
        <item>Guarani</item>
        <item>Tocantins2</item>
        <item>Morada Nova</item>
        <item>Morada do Sol</item>
        <item>Parque Santo Antônio</item>
        <item>Chácaras Rancho Alegre</item>
        <item>Jardins</item>
        <item>Tubalina</item>
        <item>Cidade Jardim</item>
        <item>Nova Uberlândia</item>
        <item>Patrimônio</item>
        <item>Morada da Colina</item>
        <item>Vigilato Pereira</item>
        <item>Saraiva</item>
        <item>Lagoinha</item>
        <item>Carajás</item>
        <item>Pampulha</item>
        <item>Jardim Karaíba</item>
        <item>Jardim Inconfidência</item>
        <item>Santa Luzia</item>
        <item>Granada</item>
        <item>São Jorge</item>
        <item>Laranjeiras</item>
        <item>Shopping Park</item>
        <item>Gávea Sul</item>
        <item>Santa Mônica</item>
        <item>Tibery</item>
        <item>Segismundo Pereira</item>
        <item>Novo Mundo</item>
        <item>Umuarama</item>
        <item>Alto Umuarama</item>
        <item>Custódio Pereira</item>
        <item>Aclimação</item>
        <item>Mansões Aeroporto</item>
        <item>Dom Almir - Região do Grande Morumbi.</item>
        <item>Alvorada</item>
        <item>Morumbi - Região do Grande Morumbi.</item>
        <item>Joana Darc - Região do Grande Morumbi.</item>
        <item>Morada dos Pássaros</item>
        <item>Quintas do Bosque</item>
        <item>Bosque dos Buritis</item>
        <item>Jardim Ipanema</item>
        <item>Jardim Califórnia</item>
        <item>Jardim Sucupira.</item>
        <item>Vila Marielza</item>

    </string-array>


</resources>
