<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="20"
    >
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_weight="10"
        >

        <Gallery
            android:id="@+id/gallery1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"

            />

    </LinearLayout>


    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_weight="10"
        >


        <TextView
            android:id="@+id/labelEndereco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/endereco"
            android:textStyle="bold"
            android:textSize="16dp"
            android:textColor="#1150E5"
            />

        <TextView
            android:id="@+id/endereco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/labelEndereco"
            android:layout_marginTop="2dp"
            android:textColor="#838485"
            android:textStyle="bold"
            android:textSize="14dp"
            />

        <TextView
            android:id="@+id/labelBairro"
            android:layout_below="@id/labelEndereco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bairro"
            android:textStyle="bold"
            android:textSize="16dp"
            android:textColor="#1150E5"
            />

        <TextView
            android:id="@+id/bairro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/labelBairro"
            android:layout_below="@id/endereco"
            android:layout_marginTop="2dp"
            android:textColor="#838485"
            android:textStyle="bold"
            android:textSize="14dp"
            />

        <TextView
            android:id="@+id/precolabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/labelBairro"
            android:text="@string/preco"
            android:textStyle="bold"
            android:textSize="16dp"
            android:textColor="#1150E5"
            />

        <TextView
            android:id="@+id/preco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bairro"
            android:layout_toRightOf="@+id/precolabel"
            android:layout_marginTop="3dp"
            android:textColor="#838485"
            android:textStyle="bold"
            android:textSize="14dp"
            />

        <TextView
            android:id="@+id/proprietariolabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/precolabel"
            android:text="@string/proprietario"
            android:textStyle="bold"
            android:textSize="16dp"
            android:textColor="#1150E5"
            />

        <TextView
            android:id="@+id/proprietario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/preco"
            android:layout_toRightOf="@+id/proprietariolabel"
            android:layout_marginTop="2dp"
            android:textColor="#838485"
            android:textStyle="bold"
            android:textSize="14dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/emaillabel"
            android:layout_below="@id/proprietariolabel"
            android:text="@string/email"
            android:textStyle="bold"
            android:textSize="16dp"
            android:textColor="#1150E5"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:layout_below="@id/proprietario"
            android:layout_toRightOf="@id/emaillabel"
            android:layout_marginTop="2dp"
            android:textColor="#838485"
            android:textStyle="bold"
            android:textSize="14dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/telefonelabel"
            android:layout_below="@id/emaillabel"
            android:text="@string/telefone"
            android:textStyle="bold"
            android:textSize="16dp"
            android:textColor="#1150E5"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/telefone"
            android:layout_below="@id/email"
            android:layout_toRightOf="@id/telefonelabel"
            android:layout_marginTop="3dp"
            android:textColor="#838485"
            android:textStyle="bold"
            android:textSize="14dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/descricaolabel"
            android:text="@string/descricao"
            android:layout_below="@+id/telefonelabel"
            android:layout_alignParentStart="true"
            android:textStyle="bold"
            android:textSize="16dp"
            android:textColor="#1150E5"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/descricao"
            android:layout_below="@id/descricaolabel"
            android:layout_marginTop="2dp"
            android:textColor="#838485"
            android:textStyle="bold"
            android:textSize="14dp"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#9FA196"
    >

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/dica"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/informacao"
            android:text="  ACESSE O BOTÃO MENU DO SEU CELULAR PARA VER AS OPÇÕES"
            android:textColor="#111110"
            android:textSize="10dp"
            android:textStyle="bold"
            android:layout_weight="10" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/dica"
            />
    </LinearLayout>
</LinearLayout>